about us page alignment fix

--- a/css/style.css
+++ b/css/style.css
@@ -2973,3 +2973,6 @@ footer .fbIcon {
 .error{
     color: red;
 }
+.companiesBlock .commonTitleh2 span{
+  display: block;
+}
